[tool.poetry]
name = "analise-de-pontualidade-performance-anac"
version = "0.1.0"
description = ""
authors = ["Maxwilliam <maxwilliamgomess@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.1"
mkdocs-mermaid2-plugin = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
